# dbg_interface.nvim

./: .debug_config.json  .gitignore
dbg_test_execs/: justfile
dbg_test_execs/cpp/: CMakeLists.txt  target1_pointers.cpp  target2_classes.cpp  target3_threads.cpp
dbg_test_execs/python/: target1_loops.py  target2_callstack.py  target3_exceptions.py
dbg_test_execs/rust/: Cargo.toml  target1_ownership.rs  target2_enums.rs  target3_panics.rs
lua/dbg_interface/: DbgArguments.lua  DbgConfig.lua  DbgEntry.lua  DbgTarget.lua  DbgType.lua  DebugArguments.lua  DebugEntry.lua  DebugHistory.lua  DebugTarget.lua  Enum.lua  FloatWin.lua  FloatWinEdit.lua  init.lua  init_backup.lua  test_utils.lua  utils.lua
tests/: test_args.lua  test_entry.lua  test_history.lua  test_target.lua
